# ChangeLog for sys-apps/calculate-utilities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-utilities-2.2.12-r13 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r13.ebuild:
  Update for templates.

*calculate-utilities-2.2.12-r12 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r12.ebuild:
  Update for calculate-lib.

*calculate-utilities-2.2.12-r11 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r11.ebuild:
  Update for lib.

*calculate-utilities-2.2.12-r9 (29 Mar 2011)

  29 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r9.ebuild:
  Update for lib and templates.

*calculate-utilities-2.2.12-r8 (29 Mar 2011)

  29 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r8.ebuild:
  Update for templates.

*calculate-utilities-2.2.12-r7 (28 Mar 2011)

  28 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r7.ebuild:
  Update for calculate-builder.

*calculate-utilities-2.2.12-r6 (28 Mar 2011)

  28 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r6.ebuild:
  Update for calculate-lib.

*calculate-utilities-2.2.12-r5 (26 Mar 2011)

  26 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r5.ebuild:
  Update for calculate-lib.

*calculate-utilities-2.2.12-r4 (26 Mar 2011)

  26 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r4.ebuild:
  Update for builder and install.

*calculate-utilities-2.2.12-r3 (24 Mar 2011)

  24 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r3.ebuild:
  Update for assemble.

*calculate-utilities-2.2.12-r2 (24 Mar 2011)

  24 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>