@@ -2,4 +2,5 @@ EBUILD calculate-utilities-2.2.12-r10.ebuild 841 RMD160 9c7db57d3c91b692ed6c3800
 EBUILD calculate-utilities-2.2.12-r11.ebuild 841 RMD160 f493b4ec1b23f355798d14b6a7e1c4dfaa8a8445 SHA1 dfaccf9052b97b7166fd60e8df7b001c0f5308f5 SHA256 83b39d9521e813eef721d8a0a45a3b0bf295e1ed00021ae88f9d77345e9cb369
 EBUILD calculate-utilities-2.2.12-r12.ebuild 841 RMD160 9213518af44b6714cf671f50b0ab662f7c539085 SHA1 459656e5cf430cad9d534d8be22be8bfb4cbe4ad SHA256 91c0b9d90533012de92fa64935de5b5c36b61a20c2b8ab8bfbec1bb1c788b1dd
 EBUILD calculate-utilities-2.2.12-r13.ebuild 841 RMD160 f40740c708a60a7b7153c5ba7a922860257bc20e SHA1 c30dce24d9787df5479adcf5da00eac6daa55e56 SHA256 9d1040c4b3135276b4f41a9ef19f1afaca2e4eda40bd3235eff85253763dcc08
-MISC ChangeLog 6123 RMD160 9e5ae6794f0aac97dfaefc9d12384b9a54760927 SHA1 f56945c47dac27194f3e9016f2e4494af030ac1b SHA256 b485571dd4ab5a4fce07ffcba4b5be632938dbfe31fb7fb6be350ed8a31ffc4a
+EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 324e6278a6e154137156bc64cbf034dea18ad316 SHA1 45e2092b44e15617d25c5927b76a4d51d4e3d77a SHA256 6c206066c58f41c1726517cc0ba2a71a7f91152c3befb5b5aa3964d88c17eda0
+MISC ChangeLog 6291 RMD160 4634daa88199fcca892074a6287852acda71e8b1 SHA1 4576c26cd15b94b6f28b120861fa5f569dd26a50 SHA256 012c78d4f3d622f712889d935c5399ed5734f756d1ce2b980baf77a9f0b28bbc
