@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.9999 (04 Apr 2011)
+
+  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.9999.ebuild:
+  Added live ebuild.
+
+
 *calculate-utilities-2.2.12-r13 (04 Apr 2011)
 
   04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
